Update Capstone Project-The Battle of Neighborhoods Week 2.ipynb

--- a/Capstone Project-The Battle of Neighborhoods Week 2.ipynb
+++ b/Capstone Project-The Battle of Neighborhoods Week 2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The Best Big Texas City Having Many German Restaurants as a Holiday Destination for Senior German Tourist Group \n",
     "\n",
-    "A senior German tourist group from Frankfurt am Main, Germany wants to purchase a holiday packages from  our Tourism Company. \n",
+    "A senior German tourist group from Frankfurt am Main, Germany wants to purchase a holiday package from  our Tourism Company. \n",
     "All of them are over 65 years old. They want to travel to a big city in Texas but they are insisting on a city having many German restaurants.\n",
     "This is an indispensable prerequisite for this tourist group. Now we will use some data and  make some analyses to determine the best option for our customers.\n"
    ]
